--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -42,6 +42,7 @@
 @import "modules/upload-video";
 @import "modules/myStudy";
 @import "modules/audioRecord";
+@import "modules/RAcolor";
 
 @import "pages/index";//done
 @import "pages/account-teacher";//done
