--- a/SRteacher/Content/scss/pages/_account-teacher.scss
+++ b/SRteacher/Content/scss/pages/_account-teacher.scss
@@ -2,16 +2,16 @@
     > thead, > tbody{
         > tr{
             >th, > td {
-                &.row-index{        width:  4%; }
-                &.row-identity{  	width:  8%; } 
-                &.row-account{   	width: 15%; }
-                &.row-password{  	width: 13%; } 
-                &.row-chineseName{  width: 12%; }
-                &.row-englishName{  width: 12%; } 
-                &.row-nationalId{   width: 12%; }
-                &.row-language{		width:  6%; } 
-                &.row-gender{    	width:  6%; }
-                &.row-status{     	width:  6%; } 
+                &.col-index       { width:  4%; }
+                &.col-identity    { width:  8%; } 
+                &.col-account     { width: 15%; }
+                &.col-password    { width: 13%; } 
+                &.col-chineseName { width: 12%; }
+                &.col-englishName { width: 12%; } 
+                &.col-nationalId  { width: 12%; }
+                &.col-language    {	width:  6%; } 
+                &.col-gender      { width:  6%; }
+                &.col-status      { width:  6%; } 
             }   
         }
     }
