--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -49,10 +49,10 @@
 @import "pages/account-class";//done
 @import "pages/account-student";//done
 
-@import "pages/testMgt-session";
-@import "pages/testMgt-classScore";
-@import "pages/testMgt-statistics";
-@import "pages/testMgt-school";
+@import "pages/DACC-session";//done
+@import "pages/DACC-classScore";//done
+@import "pages/DACC-statistics";
+@import "pages/DACC-schoolReport";
 
 
 @import "pages/RP-bookList";//done
